--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="section" id="contact">
         <h2>Kontakt</h2>
         <p class="muted">
-          Support: <a href="mailto:support@deine-domain.de?subject=PushToScroll%20Support">support@deine-domain.de</a><br/>
+          Support: <a href="mailto:support@deine-domain.de?subject=PushToScroll%20Support">Selimalcibuga@icloud.com</a><br/>
           Entwickler: <span class="inline"><code class="inline">Selim Alcibuga</code></span>
         </p>
       </div>
@@ -297,7 +297,7 @@
 
           <h3 id="pp-contact" style="margin:14px 0 8px">Kontakt</h3>
           <p class="muted">
-            Bei Fragen zur Privacy Policy: <a href="mailto:support@deine-domain.de?subject=PushToScroll%20Privacy">support@deine-domain.de</a>
+            Bei Fragen zur Privacy Policy: <a href="mailto:support@deine-domain.de?subject=PushToScroll%20Privacy">Selimalcibuga@icloud.com</a>
           </p>
 
           <p class="muted" style="font-size:12px; margin-top:14px">
